CONTENT: Add documentation example to home page; Add relocation handler for documentation; More liberal image specification in MakeDoc emitter.

--- a/app/views/home/index.rmd
+++ b/app/views/home/index.rmd
@@ -9,3 +9,5 @@ Handling rebol.org-style links:
 * [Example Script: Form Date](%/view-script.r?script=form-date.r)
 
 * [Example Download: Blog](%/download-a-script.r?script-name=blog.r)
+
+* [Example Document: Extend](%/documentation.r?script=extend.r)
